# hip_exoskeleton

./: .gitignore  CMakeLists.txt  GITCmd.md  README.md
core/: BVH.cpp  BVH.h  COPReward.cpp  Character.cpp  Character.h  DARTHelper.cpp  DARTHelper.h  Environment.cpp  Environment.h  Force.cpp  Force.h  LinearBushing.cpp  LinearBushing.h  Muscle.cpp  Muscle.h
data/: 11.urdf  NJIT_BME_EXO_Leg_Ankle04182020_novisual.urdf  NJIT_BME_EXO_Leg_Ankle04182020_novisual_boxcollision.urdf  NJIT_BME_EXO_Leg_Ankle04182020_novisual_squatting.urdf  ground.xml  human.xml  metadata.txt  model_joint_constraint.xml  muscle284_withoutupperlimb.xml
data/motion/: 0-2s_walkmotion.mot  NJIT_BME_EXO_Leg_Ankle_2DOF_squat_0.2m.mot  NJIT_BME_EXO_Leg_Ankle_2DOF_squat_0.2m_revised.mot  NJIT_BME_Leg_Exo_Step_Walk.mot  NJIT_BME_Leg_Exo_Step_Walk2.mot  NJIT_BME_Leg_Exo_Step_Walk3.mot  NJIT_BME_Leg_Exo_Step_Walk4.mot  NJIT_BME_Leg_Exo_Step_Walk_origin.mot  NJIT_BME_Leg_Exo_Step_Walk_origin2.mot  NJIT_BME_tmp3.mot  NJIT_BME_tmp4.mot  NJIT_BME_tmp4_eason.mot  NJIT_BME_tmp_walking_motion.mot  convertFormatwalk.py  demofile2.mot  demofile2_withoutrootpos.mot  exo_walking.mot  exo_walking_interpolation.mot  exo_walking_interpolation1.mot  exo_walking_interpolation2.mot  exo_walking_interpolation3.mot  exo_walking_interpolation4.mot  foot_CoM.txt  foot_walk1.mot  human_data_groundtruth.mot  human_gt_treadmill_1ms.txt  initial_exo_state.txt  initial_human_state.txt  search_frame.py  subject_exo_right_foot_walk.mot  subject_exo_right_foot_walk10.mot  subject_exo_right_foot_walk4.mot  subject_exo_right_foot_walk_11.mot  subject_exo_right_foot_walk_new.mot  subject_exo_right_foot_walk_new2.mot  walk.mot  (+14 more)
data_process/: getmetaGTfile.py  getrootposition.py  modify_humandata.py  plotForPaper.py  plotForResult.py  plotForRobustness.py  plotfootposition.py  plotmuscleactivation.py  plotmuscleactivation0.5.py  plotmuscleactivation_leftside.py
python/: CMakeLists.txt  EnvManager.cpp  EnvManager.h  Model.py  action_filter.py  infer_model.py  main.py
render/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
(+2 files in other folders)
